--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                             </li>
                             <li class="nav-item"><a href="#" class="nav-link">中文</a>
                             </li> -->
-                            <li class="nav-item"><a href="#about" class="nav-link">關於我們</a>
+                            <li class="nav-item"><a href="#about" class="nav-link">About</a>
                             </li>
-                            <li class="nav-item"><a href="#services" class="nav-link">服務項目</a>
+                            <li class="nav-item"><a href="#services" class="nav-link">Services</a>
                             </li>
-                            <li class="nav-item"><a href="#demo" class="nav-link">樣品展示</a>
+                            <li class="nav-item"><a href="#demo" class="nav-link">Demo</a>
                             </li>
-                            <li class="nav-item"><a href="#contact" class="nav-link">連絡我們</a>
+                            <li class="nav-item"><a href="#contact" class="nav-link">Contact</a>
                             </li>
                             <li class="nav-item"><a href="#" class="nav-link">中文</a>
                             </li>
