--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
                 <div>
                     <div class="collapse navbar-collapse" id="myNavbar">
                         <ul class="nav navbar-nav">
-                            <!-- <li class="nav-item"><a href="#index" class="nav-link">HOME</a>
+                            <li class="nav-item"><a href="#index" class="nav-link">HOME</a>
                             </li>
-                            <li class="nav-item"><a href="#about" class="nav-link">ABOUT</a>
+                            <li class="nav-item"><a href="#about" class="nav-link">關於我們</a>
                             </li>
-                            <li class="nav-item"><a href="#services" class="nav-link">SERVICES</a>
+                            <li class="nav-item"><a href="#services" class="nav-link">服務項目及流程</a>
                             </li>
-                            <li class="nav-item"><a href="#demo" class="nav-link">DEMO</a>
+                            <li class="nav-item"><a href="#demo" class="nav-link">成品展示</a>
                             </li>
-                            <li class="nav-item"><a href="#contact" class="nav-link">CONTACT</a>
+                            <li class="nav-item"><a href="#contact" class="nav-link">連絡我們</a>
                             </li>
-                            <li class="nav-item"><a href="#" class="nav-link">中文</a>
-                            </li> -->
-                            <li class="nav-item"><a href="#about" class="nav-link">About</a>
+                            <li class="nav-item"><a href="#" class="nav-link">English</a>
+                            </li>
+                            <!-- <li class="nav-item"><a href="#about" class="nav-link">About</a>
                             </li>
                             <li class="nav-item"><a href="#services" class="nav-link">Services</a>
                             </li>
@@ -40,7 +40,7 @@
                             <li class="nav-item"><a href="#contact" class="nav-link">Contact</a>
                             </li>
                             <li class="nav-item"><a href="#" class="nav-link">中文</a>
-                            </li>
+                            </li> -->
                         </ul>
 						<form class="form-inline">
         					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -52,33 +52,107 @@
         <div id="index">
           <div id="fade">
             <h3 class="container">
-                <div id="blur">
-                </div>
+<!--                 <div id="blur">
+                </div> -->
             </h3>
           </div>
         </div> 
         <div id="about">
           <div id="fade">
-          	<h1>About</h1>
-            <h3 class="container"></h3>
+          	<h1>關於我們</h1>
+            <h4 class="container">奏鳴曲唱片藝術有限公司成立於2010年，秉持著高傳真的理念， 將演奏者的原音完整的錄製與呈現，無論是現場演出或是進錄音室，我們將提供最優良器材及技術，以及正確的錄音理念為您服務。
+錄音室市場上比比皆是，但是鮮少是為了古典音樂而設計，空間不夠寬，使得在器樂的演奏上常常音色乾澀，錄製完後用軟體來編輯，不然就只能花大錢來借各公私立演奏廳來錄音，奏鳴曲錄音室深感到古典音樂演奏者的無力，採用音響學的設計，斥資百萬打造一個比一般市面上大的錄音室，不但聆聽上的空間感，和經各種樂器的演奏測試中，都得到另人驚豔的低頻和豐富的殘響！歡迎您來錄音室試聽及演奏！
+</h4>
           </div>
         </div> 
         <div id="services">
           <div id="fade">
-          	<h1>Services</h1>
-            <h3 class="container"></h3>
+          	<h1>服務項目及流程</h1>
+            <div class="container">
+                <ul>
+                <li>錄音設備一律使用業界頂級麥克風，及錄音系統。</li>
+<li>影音錄製現場皆以雙備份製作，以確保最低的硬體故障風險。</li>
+<li>專案皆以〝場〞計價，不含中場休息或中斷的空白時間。</li>
+<li>超過二小時以上，需另收超時費用,累進計價。</li>
+<li>正式演出時無人操控、無法變換或移動位置。若因演出安排而導致鏡頭架設困難，本公司可盡說明之責後視情況取消，恕無法退款。</li>
+<li>光碟彩印為手工製作，光碟印刷防刮防水不褪色，是最高規格小額製作品質。</li>
+<li>初剪完成會以非公開方式上傳雲端硬碟供演出方線上校對，可上收看或下載保存。</li>
+<li>本公司之錄音服務不包含現場擴音。</li>
+<li>若有任何關於演出現場的聲音問題皆可來信，我們有豐富的舞台經驗，可以給您最全面的技術支援。</li>
+</ul>
+<h3>前製作業</h3>
+<ul>
+<li>我們堅持精心掌握事前的準備工作、以及事後的製作流程的每一個細節是。</li>
+</ul>
+<ol>
+<li>建議先以信件註明演出日期與時間、地點、樂器類型等資訊，我們會給您一個錄影錄音最佳的規劃與估價。</li>
+<li>在確認服務後，我們會給您正式報價單，待接近服務日期時，我們會再跟您做最後一次確認，並交涉到場資訊。</li>
+ 演出日當天, 到音樂廳現場後，搬運器材、規劃器材擺放位置及動線，並付款
+<li>錄音試音結束後，開始架設現場錄影機，並測光、試拍，彩排 。</li>
+</ol>
+<h3>後製作業</h3>
+<ol>
+<li>做檔案的存取與備份。
+ 專業剪輯軟體製作、修剪、字幕，並呈現最專業精美的畫面。</li>
+<li>專業音訊處理系統多軌剪輯，以錄音室規格混音製作，製作最高品質聽覺享受。</li>
+<li>將初步完成的影片，上傳至雲端硬碟供您做校對，以簡易的方式的自行下載影片收藏。</li>
+<li>最後製作DVD格式、與CD格式母片。</li>
+</ol>
+</div>
           </div>
         </div> 
         <div id="demo">
           <div id="fade">
-          	<h1>Demo</h1>
-            <h3 class="container"></h3>
+          	<h1>成品展示</h1>
+            <h3 class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-3">
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/jimyqF6tH9Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col-sm-3">
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/vGlXG7ttVek" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col-sm-3">
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/7zqJHRQtq4E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col-sm-3">
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/bKJW5UHMSkc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/ZwsFfx4KP00" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col-sm-3">
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/sonJoDFddgE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col-sm-3">
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/PscwyAKYGjs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col-sm-3">
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/IC6MC9K--sc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            </div>
+            </h3>
           </div>
         </div> 
         <div id="contact">
           <div id="fade">
-          	<h1>Contact</h1>
-            <h3 class="container"></h3>
+          	<h1>連絡我們</h1>
+            <h3 class="container">
+                <form action="https://formspree.io/toxxca@hotmail.com" method="POST">
+                <div class="form-group">
+                        <input type="name" class="form-control" id="name" placeholder="Name">
+                        </input>
+                        <input type="email" class="form-control" id="email" placeholder="Email Address">
+                        </input>
+                        <input type="phone" class="form-control" id="phone" placeholder="Phone Number">
+                        </input>
+                        <textarea name="message" class="form-control" id="message" placeholder="Message"></textarea>
+                        <input type="submit" class="btn btn-primary" value="Send"></input>
+                </div>
+            </form>
+            </h3>
           </div>
         </div> 
         <script src="js/script.js"></script>
@@ -86,7 +160,7 @@
     <footer>
         <p>
             Sonata Record Company<br>
-            <a href="mailto: sonatarecordc@yahoo.com">sonatarecordc@yahoo.com</a>
+            <a href="mailto: sonatarecordc@yahoo.com">sonatarecordc@yahoo.com</a> | 07-335-1331
         </p>
     </footer>
 </html>
