--- a/index.html
+++ b/index.html
@@ -107,30 +107,31 @@
             <h3 class="container-fluid">
                 <div class="row">
                     <div class="col-sm-3">
-                <iframe width="400" height="315" src="https://www.youtube.com/embed/jimyqF6tH9Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/h3-PwpvzD0Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-sm-3">
-                <iframe width="400" height="315" src="https://www.youtube.com/embed/vGlXG7ttVek" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/in02joUCGsM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-sm-3">
-                <iframe width="400" height="315" src="https://www.youtube.com/embed/7zqJHRQtq4E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/j8kHXfX5X9w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-sm-3">
-                <iframe width="400" height="315" src="https://www.youtube.com/embed/bKJW5UHMSkc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/sirSqefgaDk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-3">
-                <iframe width="400" height="315" src="https://www.youtube.com/embed/ZwsFfx4KP00" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/WZ2vlhKFHWE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-sm-3">
-                <iframe width="400" height="315" src="https://www.youtube.com/embed/sonJoDFddgE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/iKYB1u6WJus" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-sm-3">
-                <iframe width="400" height="315" src="https://www.youtube.com/embed/PscwyAKYGjs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/djKC5c_acHk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-sm-3">
-                <iframe width="400" height="315" src="https://www.youtube.com/embed/IC6MC9K--sc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/v7OhvP3ExEM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
             </div>
             </div>
             </h3>
