--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <div id="index">
           <div id="fade">
             <h3 class="container">
-<!--                 <div id="blur">
-                </div> -->
+                <div id="blur">
+                </div>
             </h3>
           </div>
         </div> 
