--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
         </nav>
         <div id="index">
           <div id="fade">
-            <h3 class="container">
+            <h3 class="container text-center">
+                奏鳴曲唱片藝術
+                <h6 class="text-center">為團體或個人提供高畫質及高音效的各式音樂演奏會現場與錄音室室內的影音錄製</h6>
                 <div id="blur">
                 </div>
             </h3>
@@ -160,8 +162,8 @@
     </body>
     <footer>
         <p>
-            Sonata Record Company<br>
-            <a href="mailto: sonatarecordc@yahoo.com">sonatarecordc@yahoo.com</a> | 07-335-1331
+            Sonata Record<br>
+            <a href="mailto: sonatarecordc@yahoo.com">toxxca@hotmail.com</a> | 07-335-1331
         </p>
     </footer>
 </html>
